Fixed avatar resizing on mobile feed
Moved feed post box fix to the status panel css

--- a/app/assets/stylesheets/modules/activity-feed.css.scss
+++ b/app/assets/stylesheets/modules/activity-feed.css.scss
@@ -140,10 +140,4 @@
       margin-top: -25px;
     }
   }
-
-  .update-panel {
-    .row {
-      word-wrap: break-word;
-    }
-  }
 }
